# nano-aha-moment

./: .gitignore  LICENSE  README.md  aha.py  dummy_trajectories.json  eval_test.py  nano_r1.ipynb  nano_r1_script.py  pyproject.toml  r1.ipynb  r1_gold.ipynb  r1_gold_education.ipynb  r1_script.py  r1_script_prompt_len.py  r1_tests.ipynb  r1_todo.ipynb  requirements.txt  test_utils.py  utils.py
notebooks/: checkpoint_playground.ipynb  rl_pretrain.ipynb  trajectory_playground.ipynb
